<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunflowers"
    android:backgroundTint="#CDF4F4F1"
    android:backgroundTintMode="src_over"
    android:drawingCacheQuality="auto"
    android:fadeScrollbars="true"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="360dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="204dp"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/Entrer_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passw"
        android:layout_width="360dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/Entrer_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="#330303"
        android:text="@string/GetNewPass"
        android:textAlignment="viewEnd"
        android:textColor="#02072E"
        android:textColorHighlight="#390606"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passw" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0E5A785C"
        android:onClick="signUp"
        android:text="@string/MoveTo_SignUp"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/sign"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#21150101"
        android:backgroundTintMode="screen"
        android:text="@string/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passw"
        app:layout_constraintVertical_bias="0.606" />

</androidx.constraintlayout.widget.ConstraintLayout>