<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplaySignUp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="127dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/MoveTo_SignUp"
        android:textColor="#F9A825"
        android:textColorHighlight="#EDD80F"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="64dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/FName"
        android:textColor="#010419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="272dp"
        android:layout_height="44dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="64dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:text="@string/LName"
        android:textColor="#010419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="64dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:text="login"
        android:textColor="#010419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="64dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:text="Password"
        android:textColor="#010419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="270dp"
        android:layout_height="41dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <Button
        android:id="@+id/regbutton"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/custom_button"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>